3º Ano 2º Semestre/Compiladores/Projeto/src/.antlr/pdrawParser.java
// Generated from c:/Users/joaoa/OneDrive/Ambiente de Trabalho/Compiladores Projeto/pdraw-t06/src/pdraw.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pdrawParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, Type=55, Int=56, Real=57, Bool=58, Color=59, ColorHex=60, 
		Id=61, String=62, Comma=63, Newline=64, Comment=65, Whitespace=66;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_penAttribute = 2, RULE_penOptions = 3, 
		RULE_penTypeDef = 4, RULE_penAction = 5, RULE_canvasDef = 6, RULE_penAssignment = 7, 
		RULE_varAssignment = 8, RULE_varDeclaration = 9, RULE_print = 10, RULE_penAlter = 11, 
		RULE_execution = 12, RULE_pause = 13, RULE_if = 14, RULE_canvas_select = 15, 
		RULE_canvas_color = 16, RULE_function_declaration = 17, RULE_function = 18, 
		RULE_until = 19, RULE_for_loop = 20, RULE_expr = 21, RULE_point = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "penAttribute", "penOptions", "penTypeDef", "penAction", 
			"canvasDef", "penAssignment", "varAssignment", "varDeclaration", "print", 
			"penAlter", "execution", "pause", "if", "canvas_select", "canvas_color", 
			"function_declaration", "function", "until", "for_loop", "expr", "point"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'color'", "'='", "'position'", "'orientation'", 
			"'\\u00BA'", "'rad'", "'thickness'", "'pressure'", "'forward'", "'backward'", 
			"'up'", "'down'", "'left'", "'right'", "'pause'", "'define'", "'pen'", 
			"'canvas'", "'new'", "','", "'->'", "'stdout'", "'<-'", "'execute'", 
			"'if'", "'('", "')'", "'select'", "'def'", "'function'", "'functionador'", 
			"'until'", "'for'", "'not'", "'=='", "'<='", "'<'", "'>='", "'>'", "'!='", 
			"'*'", "'/'", "'//'", "'%'", "'**'", "'\\'", "'+'", "'-'", "'and'", "'or'", 
			"'xor'", "'stdin'", null, null, null, null, null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "Type", "Int", "Real", "Bool", 
			"Color", "ColorHex", "Id", "String", "Comma", "Newline", "Comment", "Whitespace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pdraw.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pdrawParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(pdrawParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7475975512836145154L) != 0)) {
				{
				{
				setState(46);
				stat();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_CanvasDefContext extends StatContext {
		public CanvasDefContext canvasDef() {
			return getRuleContext(CanvasDefContext.class,0);
		}
		public Stat_CanvasDefContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_ifContext extends StatContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public Stat_ifContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_function_declarationContext extends StatContext {
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Stat_function_declarationContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_canvas_selectContext extends StatContext {
		public Canvas_selectContext canvas_select() {
			return getRuleContext(Canvas_selectContext.class,0);
		}
		public Stat_canvas_selectContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_CurlyContext extends StatContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public Stat_CurlyContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_ExecContext extends StatContext {
		public ExecutionContext execution() {
			return getRuleContext(ExecutionContext.class,0);
		}
		public Stat_ExecContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_ExprContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Stat_ExprContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_UntilContext extends StatContext {
		public UntilContext until() {
			return getRuleContext(UntilContext.class,0);
		}
		public Stat_UntilContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_ForContext extends StatContext {
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Stat_ForContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_PenAssignContext extends StatContext {
		public PenAssignmentContext penAssignment() {
			return getRuleContext(PenAssignmentContext.class,0);
		}
		public Stat_PenAssignContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_VarDeclarationContext extends StatContext {
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public Stat_VarDeclarationContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_VarAssignContext extends StatContext {
		public VarAssignmentContext varAssignment() {
			return getRuleContext(VarAssignmentContext.class,0);
		}
		public Stat_VarAssignContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_PenAlterContext extends StatContext {
		public PenAlterContext penAlter() {
			return getRuleContext(PenAlterContext.class,0);
		}
		public Stat_PenAlterContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_canvas_colorContext extends StatContext {
		public Canvas_colorContext canvas_color() {
			return getRuleContext(Canvas_colorContext.class,0);
		}
		public Stat_canvas_colorContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_PenTypeDefContext extends StatContext {
		public PenTypeDefContext penTypeDef() {
			return getRuleContext(PenTypeDefContext.class,0);
		}
		public Stat_PenTypeDefContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_PenAcioContext extends StatContext {
		public PenActionContext penAction() {
			return getRuleContext(PenActionContext.class,0);
		}
		public Stat_PenAcioContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_PrintContext extends StatContext {
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Stat_PrintContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_PauseContext extends StatContext {
		public PauseContext pause() {
			return getRuleContext(PauseContext.class,0);
		}
		public Stat_PauseContext(StatContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Stat_functionContext extends StatContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public Stat_functionContext(StatContext ctx) { copyFrom(ctx); }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Stat_PenTypeDefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				penTypeDef();
				}
				break;
			case 2:
				_localctx = new Stat_PenAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				penAssignment();
				}
				break;
			case 3:
				_localctx = new Stat_PenAcioContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				penAction();
				}
				break;
			case 4:
				_localctx = new Stat_VarAssignContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				varAssignment();
				}
				break;
			case 5:
				_localctx = new Stat_VarDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(58);
				varDeclaration();
				}
				break;
			case 6:
				_localctx = new Stat_ExecContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(59);
				execution();
				}
				break;
			case 7:
				_localctx = new Stat_CanvasDefContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(60);
				canvasDef();
				}
				break;
			case 8:
				_localctx = new Stat_PrintContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(61);
				print();
				}
				break;
			case 9:
				_localctx = new Stat_canvas_colorContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(62);
				canvas_color();
				}
				break;
			case 10:
				_localctx = new Stat_PenAlterContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(63);
				penAlter();
				}
				break;
			case 11:
				_localctx = new Stat_PauseContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(64);
				pause();
				}
				break;
			case 12:
				_localctx = new Stat_ifContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(65);
				if_();
				}
				break;
			case 13:
				_localctx = new Stat_function_declarationContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(66);
				function_declaration();
				}
				break;
			case 14:
				_localctx = new Stat_functionContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(67);
				function();
				}
				break;
			case 15:
				_localctx = new Stat_canvas_selectContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(68);
				canvas_select();
				}
				break;
			case 16:
				_localctx = new Stat_UntilContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(69);
				until();
				}
				break;
			case 17:
				_localctx = new Stat_ForContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(70);
				for_loop();
				}
				break;
			case 18:
				_localctx = new Stat_ExprContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(71);
				expr(0);
				}
				break;
			case 19:
				_localctx = new Stat_CurlyContext(_localctx);
				enterOuterAlt(_localctx, 19);
				{
				setState(72);
				match(T__0);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7475975512836145154L) != 0)) {
					{
					{
					setState(73);
					stat();
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(79);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PenAttributeContext extends ParserRuleContext {
		public PenAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_penAttribute; }
	 
		public PenAttributeContext() { }
		public void copyFrom(PenAttributeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenAttribute_colorContext extends PenAttributeContext {
		public TerminalNode Color() { return getToken(pdrawParser.Color, 0); }
		public TerminalNode Comma() { return getToken(pdrawParser.Comma, 0); }
		public PenAttribute_colorContext(PenAttributeContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenAttribute_orientationContext extends PenAttributeContext {
		public Token penRotateUnits;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Comma() { return getToken(pdrawParser.Comma, 0); }
		public PenAttribute_orientationContext(PenAttributeContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenAttribute_positionContext extends PenAttributeContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Comma() { return getToken(pdrawParser.Comma, 0); }
		public PenAttribute_positionContext(PenAttributeContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenAttribute_thicknessContext extends PenAttributeContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Comma() { return getToken(pdrawParser.Comma, 0); }
		public PenAttribute_thicknessContext(PenAttributeContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenAttribute_pressureContext extends PenAttributeContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Comma() { return getToken(pdrawParser.Comma, 0); }
		public PenAttribute_pressureContext(PenAttributeContext ctx) { copyFrom(ctx); }
	}

	public final PenAttributeContext penAttribute() throws RecognitionException {
		PenAttributeContext _localctx = new PenAttributeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_penAttribute);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new PenAttribute_colorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(T__2);
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(83);
					match(T__3);
					}
				}

				setState(86);
				match(Color);
				setState(87);
				match(Comma);
				}
				break;
			case T__4:
				_localctx = new PenAttribute_positionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(T__4);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(89);
					match(T__3);
					}
				}

				setState(92);
				expr(0);
				setState(93);
				match(Comma);
				}
				break;
			case T__5:
				_localctx = new PenAttribute_orientationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				match(T__5);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(96);
					match(T__3);
					}
				}

				setState(99);
				expr(0);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6 || _la==T__7) {
					{
					setState(100);
					((PenAttribute_orientationContext)_localctx).penRotateUnits = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==T__6 || _la==T__7) ) {
						((PenAttribute_orientationContext)_localctx).penRotateUnits = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(103);
				match(Comma);
				}
				break;
			case T__8:
				_localctx = new PenAttribute_thicknessContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				match(T__8);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(106);
					match(T__3);
					}
				}

				setState(109);
				expr(0);
				setState(110);
				match(Comma);
				}
				break;
			case T__9:
				_localctx = new PenAttribute_pressureContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				match(T__9);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(113);
					match(T__3);
					}
				}

				setState(116);
				expr(0);
				setState(117);
				match(Comma);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PenOptionsContext extends ParserRuleContext {
		public PenOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_penOptions; }
	 
		public PenOptionsContext() { }
		public void copyFrom(PenOptionsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_backwardContext extends PenOptionsContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PenOptions_backwardContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_rightContext extends PenOptionsContext {
		public Token penRotateUnits;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PenOptions_rightContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_downContext extends PenOptionsContext {
		public PenOptions_downContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_pauseContext extends PenOptionsContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PenOptions_pauseContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_upContext extends PenOptionsContext {
		public PenOptions_upContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_forwardContext extends PenOptionsContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PenOptions_forwardContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PenOptions_leftContext extends PenOptionsContext {
		public Token penRotateUnits;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PenOptions_leftContext(PenOptionsContext ctx) { copyFrom(ctx); }
	}

	public final PenOptionsContext penOptions() throws RecognitionException {
		PenOptionsContext _localctx = new PenOptionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_penOptions);
		int _la;
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				_localctx = new PenOptions_forwardContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__10);
				setState(122);
				expr(0);
				}
				break;
			case T__11:
				_localctx = new PenOptions_backwardContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(T__11);
				setState(124);
				expr(0);
				}
				break;
			case T__12:
				_localctx = new PenOptions_upContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				match(T__12);
				}
				break;
			case T__13:
				_localctx = new PenOptions_downContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				match(T__13);
				}
				break;
			case T__14:
				_localctx = new PenOptions_leftContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				match(T__14);
				setState(128);
				expr(0);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6 || _la==T__7) {
					{
					setState(129);
					((PenOptions_leftContext)_localctx).penRotateUnits = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==T__6 || _la==T__7) ) {
						((PenOptions_leftContext)_localctx).penRotateUnits = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				break;
			case T__15:
				_localctx = new PenOptions_rightContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				match(T__15);
				setState(133);
				expr(0);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6 || _la==T__7) {
					{
					setState(134);
					((PenOptions_rightContext)_localctx).penRotateUnits = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==T__6 || _la==T__7) ) {
						((PenOptions_rightContext)_localctx).penRotateUnits = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				break;
			case T__16:
				_localctx = new PenOptions_pauseContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(137);
				match(T__16);
				setState(138);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PenTypeDefContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(pdrawParser.Id, 0); }
		public TerminalNode Comma() { return getToken(pdrawParser.Comma, 0); }
		public List<PenAttributeContext> penAttribute() {
			return getRuleContexts(PenAttributeContext.class);
		}
		public PenAttributeContext penAttribute(int i) {
			return getRuleContext(PenAttributeContext.class,i);
		}
		public PenTypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_penTypeDef; }
	}

	public final PenTypeDefContext penTypeDef() throws RecognitionException {
		PenTypeDefContext _localctx = new PenTypeDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_penTypeDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__17);
			setState(142);
			match(T__18);
			setState(143);
			match(Id);
			setState(144);
			match(T__0);
			setState(146); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(145);
				penAttribute();
				}
				}
				setState(148); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1640L) != 0) );
			setState(150);
			match(T__1);
			setState(151);
			match(Comma);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
